--- a/partials/__navbar.html
+++ b/partials/__navbar.html
@@ -73,7 +73,8 @@
                 class="main-nav__close"
                 aria-expanded="false"
                 data-toggle="nav">
-                <i class="fa fa-times"></i>
+                <div></div>
+                <div></div>
             </button>
 
             <ul class="main-nav__links mb-4 mb-lg-0">
