--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -1,3 +1,5 @@
 @import './_home-banner',
         './_banner-strip',
-        './_banner-folha';
+        './_banner-folha',
+        './_pontos-coleta',
+        './_conheca-steps';
