--- a/partials/__footer.html
+++ b/partials/__footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2 wow fadeIn order-2 order-md-first">
                 <ul class="footer__links">
                     <li class="title">
                         O IBER
@@ -10,16 +10,24 @@
                         <a href="#">
                             Diretoria
                         </a>
+
+                    </li>
+
+                    <li>
+
                         <a href="#">
                             Estrutura
                         </a>
+                    </li>
+
+                    <li>
                         <a href="#">
                             Onde Atuamos
                         </a>
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2 mb-lg-0  wow fadeIn">
                 <ul class="footer__links">
                     <li class="title">
                         Serviços
@@ -56,9 +64,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2  wow fadeIn order-3">
                 <ul class="footer__links">
-                    <li class="title" style="opacity: 0">
+                    <li class="title d-none d-md-block" style="opacity: 0">
                         .
                     </li>
                     <li>
@@ -93,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2  wow fadeIn order-4">
                 <ul class="footer__links">
                     <li class="title">
                         Outros
@@ -130,25 +138,25 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <div class="col-lg-4 d-flex align-items-center order-last">
+                <div class="footer__right">
+                    <a href="#" class="color-white d-block mb-3 wow fadeInUp">
+                        Validar certificado/selo
+                    </a>
 
-        <div class="col-lg-4">
-            <div class="footer__right">
-                <a href="#" class="text-uppercase">
-                    Validar certificado/selo
-                </a>
+                    <a href="#" class="btn-cprimary py-2  d-block mb-3  wow fadeInUp" data-wow-delay="0.2s">
+                        Solicitar a destinação
+                    </a>
+                    <a href="#" class="btn-csecondary py-2  d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
+                        Área restrita
+                    </a>
 
-                <a href="#" class="btn-primary">
-                    Solicitar a destinação
-                </a>
-                <a href="#" class="btn-secondary">
-                    Área restrita
-                </a>
-
-                <p class="footer__copyright">
-                    © 2010-2019 - IBER Brasil - Todos os direitos reservados
-                </p>
+                    <p class="footer__copyright wow fadeInUp" data-wow-delay="0.2s">
+                        © 2010-2019 - IBER Brasil - Todos os direitos reservados
+                    </p>
+                </div>
             </div>
         </div>
+
     </div>
 </footer>
