--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -2,4 +2,6 @@
         './_banner-strip',
         './_banner-folha',
         './_pontos-coleta',
+        './_banner-planeta',
+        './_ultimas-noticias',
         './_conheca-steps';
