--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1270px;
+    max-width: 1350px;
   }
 }
 
@@ -1072,7 +1072,7 @@ button:focus {
   display: flex;
   justify-content: center;
   border: 1px solid #fff;
-  padding: 14px 50px;
+  padding: 13px 60px;
   color: #fff;
   text-transform: uppercase;
   border-radius: 4px;
@@ -1108,59 +1108,142 @@ button:focus {
   font-size: 13px;
 }
 
-.footer {
-  padding: 30px 0;
-  background-color: #FBF8F5;
-  letter-spacing: 1px;
-  color: #fffff5;
-}
-
-@media screen and (min-width: 1400px) {
-  .footer .container {
-    max-width: 1300px;
-  }
-}
-
-.footer__list {
-  text-transform: lowercase;
-  color: #707070;
-}
-
-.footer__list a {
-  display: block;
-  margin-bottom: 4px;
-  color: #707070 !important;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.footer__list a:hover {
-  color: #7DA04C !important;
-}
-
-.footer__list a.btn-media {
+.noticia {
+  position: relative;
   display: flex;
-  color: #fff !important;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-.footer__list-item {
-  font-size: 15px;
-  font-weight: 300;
-  margin-bottom: 10px;
-}
-
-.footer__list-title {
-  font-weight: 800;
-  margin-bottom: 8px;
+@media screen and (max-width: 992px) {
+  .noticia {
+    max-width: 370px;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
-  .footer__list {
-    text-align: center;
+  .noticia {
+    max-width: 330px;
+    margin: 0 auto;
   }
+}
+
+.noticia__img {
+  height: 200px;
+  background-color: #A3A3A3;
+}
+
+.noticia__img img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+
+.noticia__caption {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  position: relative;
+  height: auto;
+  background-color: #FFFFFF;
+  padding: 30px 10px 26px 20px;
+}
+
+.noticia__caption .category {
+  display: block;
+  width: auto;
+  border-radius: 7px;
+  background-color: #7DA04C;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 3px 8px;
+  font-size: 12px;
+  margin-top: -40px;
+}
+
+.noticia__caption .date {
+  padding-top: 16px;
+  font-size: 16px;
+  margin-bottom: 4px;
+  color: #7DA04C;
+}
+
+.noticia__caption .title {
+  color: #707070;
+  font-size: 23px;
+  font-weight: bold;
+  margin-bottom: 12px;
+}
+
+.noticia__caption .desc {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.3;
+  color: #707070;
+  margin-bottom: 18px;
+}
+
+.noticia__caption .btn {
+  font-size: 14px;
+  padding: 5px 15px;
+  background-color: #7DA04C;
+  border-radius: 4px;
+  color: #fff;
+}
+
+.footer {
+  background-color: #2A2A2A;
+  padding: 40px 0;
+  padding-bottom: 60px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.footer__links li.title {
+  color: #7DA04C !important;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.footer__links li {
+  margin-bottom: 8px;
+}
+
+.footer__links li,
+.footer__links li a {
+  color: #fff !important;
+}
+
+.footer__right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-self: center;
+  padding-top: 20px;
+}
+
+@media screen and (max-width: 992px) {
+  .footer__right {
+    padding-top: 40px;
+    align-items: center;
+  }
+}
+
+.footer__copyright {
+  color: #FFFFFF;
+  margin-top: 15px;
+  text-align: right;
+}
+
+.text-underline {
+  text-decoration: underline !important;
 }
 
 .home-banner__caption {
@@ -1423,7 +1506,7 @@ button:focus {
 
 .pontos-coleta {
   position: relative;
-  padding-bottom: 260px;
+  padding-bottom: 60px;
   background: #fff;
 }
 
@@ -1602,6 +1685,54 @@ button:focus {
   padding: 0;
 }
 
+.banner-planeta {
+  background-color: #30959F;
+}
+
+.banner-planeta__caption {
+  max-width: 397px;
+}
+
+.banner-planeta__caption .inner-title {
+  font-size: 34px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.banner-planeta__caption .inner-desc {
+  font-size: 24px;
+  color: #FFFFFF;
+  font-weight: 400;
+}
+
+.ultimas-noticias {
+  padding: 40px 0;
+  background-color: #F4F4F4;
+}
+
+.ultimas-noticias__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 992px) {
+  .ultimas-noticias__header {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.ultimas-noticias__header .inner-title {
+  color: #7DA04C;
+  font-size: 34px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
 .conheca {
   position: relative;
   background-color: #F4F4F4;
@@ -1742,7 +1873,7 @@ button:focus {
 
 .conheca__item-battery {
   position: absolute;
-  right: -34%;
+  right: -38%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1850,6 +1981,16 @@ button:focus {
   color: #fff !important;
   border-radius: 4px;
   font-size: 20px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.conheca__carousel .owl-nav .owl-prev:hover, .conheca__carousel .owl-nav .owl-next:hover {
+  background-color: #2b868f;
+  transform: scale(1.04) translateY(-50%);
 }
 
 .conheca__carousel .owl-nav .owl-prev::after, .conheca__carousel .owl-nav .owl-prev::before, .conheca__carousel .owl-nav .owl-next::after, .conheca__carousel .owl-nav .owl-next::before {
