--- a/scss/components/UI/__main-footer.scss
+++ b/scss/components/UI/__main-footer.scss
@@ -1,46 +1,51 @@
 .footer {
-    padding: 30px 0;
-    background-color: #FBF8F5;
-    letter-spacing: 1px;
-    color: hsl(60, 100%, 98%);
+    background-color: #2A2A2A;
+    padding: 40px 0;
+    padding-bottom: 60px;
 
-    .container {
-        @media screen and (min-width: 1400px) {
-            max-width: 1300px;
+    &__links {
+
+        @media screen and (max-width: $bp-MD){
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-    }
-
-    &__list {
-        text-transform: lowercase;
-        color: $color-dark;
-
-        a {
-            display: block;
-            margin-bottom: 4px;
-            color: $color-dark !important;
-            @include transition();
-            &:hover {
-                color: $color-primary !important;
-            }
-
-            &.btn-media {
-                display: flex;
-                color: #fff !important;
-            }
-        }
-
-        &-item {
+        
+        li.title {
+            color: #7DA04C !important;
+            font-weight: bold;
             font-size: 15px;
-            font-weight: 300;
-            margin-bottom: 10px;
         }
 
-        &-title {
-            font-weight: 800;
+        li {
             margin-bottom: 8px;
         }
-        @media screen and (max-width: $bp-MD) {
-            text-align: center;
+        li,
+        li a {
+            color: #fff !important;
         }
     }
+
+    &__right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-self: center;
+        padding-top: 20px;
+
+        @media screen and (max-width: $bp-LG) {
+            padding-top: 40px;
+            align-items: center;
+        }
+    }
+
+    &__copyright {
+        color: #FFFFFF;
+        margin-top: 15px;
+        text-align: right;
+    }
+}
+
+.text-underline {
+    text-decoration: underline !important;
 }
