--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -3,5 +3,6 @@
         './_banner-folha',
         './_pontos-coleta',
         './_banner-planeta',
+        './_banner-caixa',
         './_ultimas-noticias',
         './_conheca-steps';
