--- a/scss/sections/__banner-planeta.scss
+++ b/scss/sections/__banner-planeta.scss
@@ -1,20 +1,63 @@
 .banner-planeta{
     background-color: #30959F;
+    padding: 30px 0;
 
+    @media screen and (max-width: $bp-MD){
+        padding: 50px 0;
+    }
+    
     &__caption{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         max-width: 397px;
+
+        @media screen and (max-width: $bp-LG){
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding-bottom: 40px;
+            margin: 0 auto;
+        }
 
         .inner-title{
             font-size: 34px;
             font-weight: bold;
             text-align: left;
             margin-bottom: 20px;
+            color: #fff;
+            text-transform: uppercase;
+
+            @media screen and (max-width: $bp-XL){
+                font-size: 30px;
+            }
+    
+
+            @media screen and (max-width: $bp-LG){
+                text-align: center;
+                font-size: 34px;
+            }
         }
 
         .inner-desc{
             font-size: 24px;
             color: #FFFFFF;
             font-weight: 400;
+
+            @media screen and (max-width: $bp-XL){
+                font-size: 22px;
+            }
+    
+        }
+    }
+
+    &__img{
+        width: 100%;
+
+        @media screen and (max-width: $bp-LG){
+            width: 300px;
+            margin: 0 auto;
         }
     }
 }
