--- a/scss/components/UI/__main-footer.scss
+++ b/scss/components/UI/__main-footer.scss
@@ -42,6 +42,10 @@
         color: #FFFFFF;
         margin-top: 15px;
         text-align: right;
+
+        @media screen and (max-width: $bp-LG) {
+            text-align: center;
+        }
     }
 }
 
