--- a/scss/sections/__banner-planeta.scss
+++ b/scss/sections/__banner-planeta.scss
@@ -48,6 +48,11 @@
             @media screen and (max-width: $bp-XL){
                 font-size: 22px;
             }
+
+            @media screen and (max-width: $bp-MD){
+                font-size: 20px;
+                margin-bottom: 25px;
+            }
     
         }
     }
