--- a/scss/sections/__banner-caixa.scss
+++ b/scss/sections/__banner-caixa.scss
@@ -3,10 +3,8 @@
     background-size: cover;
     padding-top: 150px;
     padding-bottom: 90px;
-
     @media screen and (max-width: $bp-LG) {
-        padding-top: 90px;
-        padding-bottom: 70px;
+        padding: 65px 0;
         background-position: -140px 0;
     }
 
@@ -15,7 +13,6 @@
         flex-direction: column;
         align-items: flex-start;
         padding-bottom: 140px;
-
         @media screen and (max-width: $bp-LG) {
             align-items: center;
             justify-content: center;
@@ -29,10 +26,12 @@
             text-transform: uppercase;
             max-width: 535px;
             margin-bottom: 30px;
-
             @media screen and (max-width: $bp-LG) {
                 font-size: 30px;
                 margin-bottom: 20px;
+            }
+            @media screen and (max-width: $bp-MD) {
+                font-size: 27px;
             }
 
         }
@@ -42,6 +41,9 @@
             font-size: 24px;
             max-width: 432px;
             margin-bottom: 35px;
+            @media screen and (max-width: $bp-MD) {
+                font-size: 19px;
+            }
         }
 
         .btn {
@@ -58,6 +60,10 @@
             font-weight: bold;
             text-transform: uppercase;
             margin-bottom: 40px;
+            @media screen and (max-width: $bp-MD) {
+                font-size: 27px;
+                margin-bottom: 25px;
+            }
         }
     }
 
@@ -103,49 +109,67 @@
     &__item {
         display: flex;
         flex-direction: column;
+        border: 1.1px solid #FECB48;
+        border-radius: 5px;
+        padding-bottom: 0.1px;
+        overflow: hidden;
 
         &-desc {
             position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 65px 25px;
+            padding: 65px 25px 78px;
             color: #fff;
             font-size: 21px;
             line-height: 1.4;
             text-align: center;
-            border: 1.1px solid #FECB48;
             border-bottom: none;
-            border-radius: 4px 4px 0 0;
+            border-radius: 0 0 4px 4px;
             margin-bottom: -2px;
 
-            &:after{
+            @media screen and (max-width: $bp-MD) {
+                padding: 55px 25px 65px;
+                font-size: 19px;
+            }
+
+            &:after {
                 content: '';
                 position: absolute;
-                top: 22px;
+                top: 20px;
                 left: 20px;
                 width: 30px;
                 height: 30px;
-                background-image: url(../../images/ico/quotes.png);
+                background-image: url("../../images/ico/quotes.png");
                 background-position: center center;
                 background-size: contain;
                 background-repeat: no-repeat;
-                
-            }
+                @media screen and (max-width: $bp-MD) {
+                    width: 21px;
+                    height: 21px;
+                    top: 17px;
+                    left: 16px;
+                }
 
-            &:before{
+            }
+            &:before {
                 content: '';
                 position: absolute;
                 bottom: 24px;
                 right: 20px;
                 width: 30px;
                 height: 30px;
-                background-image: url(../../images/ico/quotes.png);
+                background-image: url("../../images/ico/quotes.png");
                 background-position: center center;
                 background-size: contain;
                 background-repeat: no-repeat;
                 transform: rotate(180deg);
-                
+                @media screen and (max-width: $bp-MD) {
+                    width: 21px;
+                    height: 21px;
+                    right: 16px;
+                }
+
             }
         }
 
@@ -165,19 +189,29 @@
                 object-fit: cover;
                 border: 4px solid #FECB48;
                 margin-top: -45px;
-                margin-bottom: 20px;
+                margin-bottom: 17px;
+
+                @media screen and (max-width: $bp-MD) {
+                    width: 100px !important;
+                    height: 100px;
+                }
             }
 
-             .name{
-                 color: #707070;
-                 font-size: 20px;
-                 font-weight: bold;
-             }
-            .ocup{
+            .name {
+                color: #707070;
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            .ocup {
                 font-size: 20px;
                 color: #707070;
-                margin-bottom: 50px;
-            }      
+                margin-bottom: 45px;
+
+                @media screen and (max-width: $bp-MD) {
+                    margin-bottom: 30px;
+                }
+            }
         }
     }
 }
