--- a/scss/sections/__conheca-steps.scss
+++ b/scss/sections/__conheca-steps.scss
@@ -167,6 +167,12 @@
             padding: 0 40px;
         }
 
+        @media screen and (min-width: $bp-LG) and (max-width: 1300px){
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+    
+
         &-title {
             font-size: 32px;
             color: $color-secondary;
@@ -231,7 +237,7 @@
                     left: 10px;
                  }
             }
-            
+
             .owl-next{
                 right: -50px;
 
