--- a/partials/__navbar.html
+++ b/partials/__navbar.html
@@ -50,7 +50,7 @@
 <nav id="main-nav" class="main-nav">
 
     <div class="container container--max">
-        <div class="main-nav__brand">
+        <div class="main-nav__brand wow fadeIn" data-wow-delay="0.3s">
             <a href="#">
                 <img src="../images/brands/main.png" alt=""/>
             </a>
@@ -78,28 +78,28 @@
             </button>
 
             <ul class="main-nav__links mb-4 mb-lg-0">
-                <li>
+                <li class="wow fadeIn" data-wow-delay="0.1s">
                     <a href="#">O IBER</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.2s">
                     <a href="#">Serviços</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.3s">
                     <a href="#">Parceiros</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.4s">
                     <a href="#">Associados</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.5s">
                     <a href="#">Legislação</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.6s">
                     <a href="#">Eventos</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.7s">
                     <a href="#">Blog</a>
                 </li>
-                <li>
+               <li class="wow fadeIn" data-wow-delay="0.8s">
                     <a href="#">Contato</a>
                 </li>
             </ul>
