--- a/scss/components/UI/__main-footer.scss
+++ b/scss/components/UI/__main-footer.scss
@@ -30,6 +30,7 @@
         flex-direction: column;
         align-items: flex-end;
         justify-self: center;
+        width: 100%;
         padding-top: 20px;
 
         @media screen and (max-width: $bp-LG) {
@@ -42,6 +43,7 @@
         color: #FFFFFF;
         margin-top: 15px;
         text-align: right;
+        font-size: 13px;
 
         @media screen and (max-width: $bp-LG) {
             text-align: center;
