--- a/css/style.css
+++ b/css/style.css
@@ -484,8 +484,8 @@ button:focus {
 .main-header__left .socials {
   display: flex;
   white-space: nowrap;
-  padding-left: 15px;
-  padding-right: 40px;
+  padding-left: 8px;
+  padding-right: 24px;
   margin-top: 4px;
 }
 
@@ -506,7 +506,7 @@ button:focus {
 
 .main-header__left .socials i {
   font-size: 21px;
-  margin-right: 8px;
+  margin-right: 12px;
 }
 
 @media screen and (max-width: 992px) {
@@ -1250,6 +1250,7 @@ button:focus {
   flex-direction: column;
   align-items: flex-end;
   justify-self: center;
+  width: 100%;
   padding-top: 20px;
 }
 
@@ -1264,6 +1265,7 @@ button:focus {
   color: #FFFFFF;
   margin-top: 15px;
   text-align: right;
+  font-size: 13px;
 }
 
 @media screen and (max-width: 992px) {
@@ -1326,7 +1328,7 @@ button:focus {
 
 .banner-strip__img img {
   width: 100%;
-  height: 150px;
+  height: 147px;
   object-fit: cover;
   z-index: 1;
 }
@@ -1343,7 +1345,7 @@ button:focus {
   justify-content: flex-start;
   align-items: center;
   width: 50%;
-  height: 150px;
+  height: 147px;
   padding-left: 80px;
   background-color: #6BB547;
 }
@@ -1387,11 +1389,11 @@ button:focus {
   display: block;
   transform: rotate(20deg);
   z-index: 2;
-  opacity: 0;
 }
 
 @media screen and (max-width: 992px) {
   .banner-strip__caption:after {
+    opacity: 0;
     width: 105%;
     transform: rotate(2deg);
     left: -10px;
@@ -1786,9 +1788,11 @@ button:focus {
 }
 
 .banner-planeta__caption .inner-desc {
-  font-size: 24px;
+  font-size: 23px;
   color: #FFFFFF;
+  line-height: 1.4;
   font-weight: 400;
+  margin-bottom: 35px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1850,7 +1854,7 @@ button:focus {
   color: #FECB48;
   text-transform: uppercase;
   max-width: 535px;
-  margin-bottom: 30px;
+  margin-bottom: 27px;
 }
 
 @media screen and (max-width: 992px) {
