--- a/scss/components/UI/__main-footer.scss
+++ b/scss/components/UI/__main-footer.scss
@@ -44,6 +44,7 @@
         margin-top: 15px;
         text-align: right;
         font-size: 13px;
+        text-transform: uppercase;
 
         @media screen and (max-width: $bp-LG) {
             text-align: center;
